--- a/src/org/freeone/swing/JBeantoTsBeanFolderMapTablePanel.form
+++ b/src/org/freeone/swing/JBeantoTsBeanFolderMapTablePanel.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.freeone.swing.JBeantoTsBeanFolderMapTablePanel">
-  <grid id="27dc6" binding="folderMapPanel" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="folderMapPanel" layout-manager="GridLayoutManager" row-count="3" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="704" height="404"/>
@@ -18,7 +18,7 @@
       </component>
       <hspacer id="f30f5">
         <constraints>
-          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
       <vspacer id="a0b6">
@@ -34,13 +34,14 @@
           <text value="删除映射"/>
         </properties>
       </component>
-      <component id="a727" class="javax.swing.JTable" binding="table1" default-binding="true">
+      <component id="a727" class="javax.swing.JTable" binding="table1" custom-create="true" default-binding="true">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="1" column="0" row-span="1" col-span="4" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="1" use-parent-layout="false">
             <preferred-size width="150" height="50"/>
           </grid>
         </constraints>
         <properties>
+          <dropMode value="ON_OR_INSERT_ROWS"/>
           <surrendersFocusOnKeystroke value="false"/>
         </properties>
       </component>
