单文件路径修复

--- a/src/org/freeone/swing/JBeantoTsBeanFolderMapTablePanel.form
+++ b/src/org/freeone/swing/JBeantoTsBeanFolderMapTablePanel.form
@@ -34,7 +34,7 @@
           <text value="删除映射"/>
         </properties>
       </component>
-      <scrollpane id="caf7e">
+      <scrollpane id="caf7e" binding="jScrollPane">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
