--- a/src/org/freeone/swing/JBeantoTsBeanFolderMapTablePanel.form
+++ b/src/org/freeone/swing/JBeantoTsBeanFolderMapTablePanel.form
@@ -16,11 +16,6 @@
           <text value="增加映射"/>
         </properties>
       </component>
-      <hspacer id="f30f5">
-        <constraints>
-          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </hspacer>
       <vspacer id="a0b6">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
@@ -50,6 +45,11 @@
           </component>
         </children>
       </scrollpane>
+      <hspacer id="8f4ec">
+        <constraints>
+          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
     </children>
   </grid>
 </form>
