--- a/src/org/freeone/swing/ApiDocServerSettingPane.form
+++ b/src/org/freeone/swing/ApiDocServerSettingPane.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.freeone.swing.ApiDocServerSettingPane">
-  <grid id="27dc6" binding="settingPane" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="settingPane" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="728" height="449"/>
@@ -13,12 +13,12 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="服务器路径："/>
+          <text value="服务器路径12："/>
         </properties>
       </component>
       <vspacer id="ae284">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
       <component id="14543" class="javax.swing.JLabel" binding="tokenLabel">
@@ -46,6 +46,14 @@
           </grid>
         </constraints>
         <properties/>
+      </component>
+      <component id="7466f" class="javax.swing.JLabel" binding="sdkPathLabel">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="SDK路径"/>
+        </properties>
       </component>
     </children>
   </grid>
